crates/uitest/fixtures/ty_check/storage_map_wrong_provider.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/storage_map_wrong_provider.fe
---
error[8-0076]: keyed effect binding `StorageMap<u256, u256, BALANCES_ROOT>` requires a provider compatible with `lib::evm::storage_map::StorageMap<u256, u256, 0>`, but `lib::evm::storage_map::StorageMap<u256, u256, 1>` is given
   ┌─ storage_map_wrong_provider.fe:20:59
   │
20 │             with (StorageMap<u256, u256, BALANCES_ROOT> = allowances) {
   │                                                           ^^^^^^^^^^ `lib::evm::storage_map::StorageMap<u256, u256, 1>` is not compatible with keyed effect `StorageMap<u256, u256, BALANCES_ROOT>`
